// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`perspective manager should add and remove perspective 1`] = `
<div>
  <div
    class="perspectiveManager"
  >
    <div
      class="nameInput"
    >
      <span>
        路径名称：
      </span>
      <input
        type="text"
      />
    </div>
    <div
      class="save"
    >
      <button
        type="button"
      >
        添加视角
      </button>
      <button
        type="button"
      >
        保存路径
      </button>
    </div>
    <div
      class="perspContainer"
    />
    <div
      style="display: none;"
    >
      <button
        class="perspPreviewBtn"
        type="button"
      >
        <img
          alt="预览"
          src="playAll.png"
          title="预览"
        />
        预览
      </button>
    </div>
  </div>
</div>
`;

exports[`perspective manager should add and remove perspective 2`] = `
<div>
  <div
    class="perspectiveManager"
  >
    <div
      class="nameInput"
    >
      <span>
        路径名称：
      </span>
      <input
        type="text"
      />
    </div>
    <div
      class="save"
    >
      <button
        type="button"
      >
        添加视角
      </button>
      <button
        type="button"
      >
        保存路径
      </button>
    </div>
    <div
      class="perspContainer"
    >
      <div
        class="perspItem"
      >
        <div
          class="perspTools"
        >
          <span>
            视角1
          </span>
          <div>
            <img
              alt="查看"
              src="view.png"
              title="查看"
            />
            <img
              alt="编辑"
              class=""
              src="edit.png"
              title="编辑"
            />
            <img
              alt="更新"
              class=""
              src="update.png"
              title="更新"
            />
            <img
              alt="删除"
              class=""
              src="remove.png"
              title="删除"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: none;"
    >
      <button
        class="perspPreviewBtn"
        type="button"
      >
        <img
          alt="预览"
          src="playAll.png"
          title="预览"
        />
        预览
      </button>
    </div>
  </div>
</div>
`;

exports[`perspective manager should add and remove perspective 3`] = `
<div>
  <div
    class="perspectiveManager"
  >
    <div
      class="nameInput"
    >
      <span>
        路径名称：
      </span>
      <input
        type="text"
      />
    </div>
    <div
      class="save"
    >
      <button
        type="button"
      >
        添加视角
      </button>
      <button
        type="button"
      >
        保存路径
      </button>
    </div>
    <div
      class="perspContainer"
    >
      <div
        class="perspItem"
      >
        <div
          class="perspTools"
        >
          <span>
            视角1
          </span>
          <div>
            <img
              alt="查看"
              src="view.png"
              title="查看"
            />
            <img
              alt="编辑"
              class=""
              src="edit.png"
              title="编辑"
            />
            <img
              alt="更新"
              class=""
              src="update.png"
              title="更新"
            />
            <img
              alt="删除"
              class=""
              src="remove.png"
              title="删除"
            />
            <img
              alt="下移"
              class=""
              src="down.png"
              title="下移"
            />
          </div>
        </div>
      </div>
      <div
        class="perspItem"
      >
        <div
          class="perspTools"
        >
          <span>
            视角2
          </span>
          <div>
            <img
              alt="编辑帧"
              src="edit.png"
              title="编辑帧"
            />
            <img
              alt="播放"
              src="play.png"
              title="播放"
            />
            <img
              alt="查看"
              src="view.png"
              title="查看"
            />
            <img
              alt="编辑"
              class=""
              src="edit.png"
              title="编辑"
            />
            <img
              alt="更新"
              class=""
              src="update.png"
              title="更新"
            />
            <img
              alt="删除"
              class=""
              src="remove.png"
              title="删除"
            />
            <img
              alt="上移"
              class=""
              src="up.png"
              title="上移"
            />
            <img
              alt="下移"
              class=""
              src="down.png"
              title="下移"
            />
          </div>
        </div>
      </div>
      <div
        class="perspItem"
      >
        <div
          class="perspTools"
        >
          <span>
            视角3
          </span>
          <div>
            <img
              alt="编辑帧"
              src="edit.png"
              title="编辑帧"
            />
            <img
              alt="播放"
              src="play.png"
              title="播放"
            />
            <img
              alt="查看"
              src="view.png"
              title="查看"
            />
            <img
              alt="编辑"
              class=""
              src="edit.png"
              title="编辑"
            />
            <img
              alt="更新"
              class=""
              src="update.png"
              title="更新"
            />
            <img
              alt="删除"
              class=""
              src="remove.png"
              title="删除"
            />
            <img
              alt="上移"
              class=""
              src="up.png"
              title="上移"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: block;"
    >
      <button
        class="perspPreviewBtn"
        type="button"
      >
        <img
          alt="预览"
          src="playAll.png"
          title="预览"
        />
        预览
      </button>
    </div>
  </div>
</div>
`;

exports[`perspective manager should add and remove perspective 4`] = `
<div>
  <div
    class="perspectiveManager"
  >
    <div
      class="nameInput"
    >
      <span>
        路径名称：
      </span>
      <input
        type="text"
      />
    </div>
    <div
      class="save"
    >
      <button
        type="button"
      >
        添加视角
      </button>
      <button
        type="button"
      >
        保存路径
      </button>
    </div>
    <div
      class="perspContainer"
    >
      <div
        class="perspItem"
      >
        <div
          class="perspTools"
        >
          <span>
            视角1
          </span>
          <div>
            <img
              alt="查看"
              src="view.png"
              title="查看"
            />
            <img
              alt="编辑"
              class=""
              src="edit.png"
              title="编辑"
            />
            <img
              alt="更新"
              class=""
              src="update.png"
              title="更新"
            />
            <img
              alt="删除"
              class=""
              src="remove.png"
              title="删除"
            />
            <img
              alt="下移"
              class=""
              src="down.png"
              title="下移"
            />
          </div>
        </div>
      </div>
      <div
        class="perspItem"
      >
        <div
          class="perspTools"
        >
          <span>
            视角3
          </span>
          <div>
            <img
              alt="编辑帧"
              src="edit.png"
              title="编辑帧"
            />
            <img
              alt="播放"
              src="play.png"
              title="播放"
            />
            <img
              alt="查看"
              src="view.png"
              title="查看"
            />
            <img
              alt="编辑"
              class=""
              src="edit.png"
              title="编辑"
            />
            <img
              alt="更新"
              class=""
              src="update.png"
              title="更新"
            />
            <img
              alt="删除"
              class=""
              src="remove.png"
              title="删除"
            />
            <img
              alt="上移"
              class=""
              src="up.png"
              title="上移"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: block;"
    >
      <button
        class="perspPreviewBtn"
        type="button"
      >
        <img
          alt="预览"
          src="playAll.png"
          title="预览"
        />
        预览
      </button>
    </div>
  </div>
</div>
`;

exports[`perspective manager should add and remove perspective 5`] = `
<div>
  <div
    class="perspectiveManager"
  >
    <div
      class="nameInput"
    >
      <span>
        路径名称：
      </span>
      <input
        type="text"
      />
    </div>
    <div
      class="save"
    >
      <button
        type="button"
      >
        添加视角
      </button>
      <button
        type="button"
      >
        保存路径
      </button>
    </div>
    <div
      class="perspContainer"
    />
    <div
      style="display: none;"
    >
      <button
        class="perspPreviewBtn"
        type="button"
      >
        <img
          alt="预览"
          src="playAll.png"
          title="预览"
        />
        预览
      </button>
    </div>
  </div>
</div>
`;

exports[`perspective manager should edit perspective 1`] = `
<div>
  <div
    class="perspectiveManager"
  >
    <div
      class="nameInput"
    >
      <span>
        路径名称：
      </span>
      <input
        type="text"
      />
    </div>
    <div
      class="save"
    >
      <button
        type="button"
      >
        添加视角
      </button>
      <button
        type="button"
      >
        保存路径
      </button>
    </div>
    <div
      class="perspContainer"
    >
      <div
        class="perspItem"
      >
        <div
          class="perspTools"
        >
          <span>
            视角1
          </span>
          <div>
            <img
              alt="查看"
              src="view.png"
              title="查看"
            />
            <img
              alt="编辑"
              class=""
              src="edit.png"
              title="编辑"
            />
            <img
              alt="更新"
              class=""
              src="update.png"
              title="更新"
            />
            <img
              alt="删除"
              class=""
              src="remove.png"
              title="删除"
            />
          </div>
        </div>
        <div
          class="coordContainer"
        >
          <div
            class="coordEditor"
          >
            <div>
              X:
              <input
                step="10"
                type="number"
                value="1000"
              />
            </div>
            <div>
              Y:
              <input
                step="10"
                type="number"
                value="2000"
              />
            </div>
            <div>
              Z:
              <input
                step="10"
                type="number"
                value="3000"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: none;"
    >
      <button
        class="perspPreviewBtn"
        type="button"
      >
        <img
          alt="预览"
          src="playAll.png"
          title="预览"
        />
        预览
      </button>
    </div>
  </div>
</div>
`;

exports[`perspective manager should move perspective 1`] = `
<div>
  <div
    class="perspectiveManager"
  >
    <div
      class="nameInput"
    >
      <span>
        路径名称：
      </span>
      <input
        type="text"
      />
    </div>
    <div
      class="save"
    >
      <button
        type="button"
      >
        添加视角
      </button>
      <button
        type="button"
      >
        保存路径
      </button>
    </div>
    <div
      class="perspContainer"
    >
      <div
        class="perspItem"
      >
        <div
          class="perspTools"
        >
          <span>
            视角2
          </span>
          <div>
            <img
              alt="查看"
              src="view.png"
              title="查看"
            />
            <img
              alt="编辑"
              class=""
              src="edit.png"
              title="编辑"
            />
            <img
              alt="更新"
              class=""
              src="update.png"
              title="更新"
            />
            <img
              alt="删除"
              class=""
              src="remove.png"
              title="删除"
            />
            <img
              alt="下移"
              class=""
              src="down.png"
              title="下移"
            />
          </div>
        </div>
      </div>
      <div
        class="perspItem"
      >
        <div
          class="perspTools"
        >
          <span>
            视角1
          </span>
          <div>
            <img
              alt="编辑帧"
              src="edit.png"
              title="编辑帧"
            />
            <img
              alt="播放"
              src="play.png"
              title="播放"
            />
            <img
              alt="查看"
              src="view.png"
              title="查看"
            />
            <img
              alt="编辑"
              class=""
              src="edit.png"
              title="编辑"
            />
            <img
              alt="更新"
              class=""
              src="update.png"
              title="更新"
            />
            <img
              alt="删除"
              class=""
              src="remove.png"
              title="删除"
            />
            <img
              alt="上移"
              class=""
              src="up.png"
              title="上移"
            />
            <img
              alt="下移"
              class=""
              src="down.png"
              title="下移"
            />
          </div>
        </div>
      </div>
      <div
        class="perspItem"
      >
        <div
          class="perspTools"
        >
          <span>
            视角3
          </span>
          <div>
            <img
              alt="编辑帧"
              src="edit.png"
              title="编辑帧"
            />
            <img
              alt="播放"
              src="play.png"
              title="播放"
            />
            <img
              alt="查看"
              src="view.png"
              title="查看"
            />
            <img
              alt="编辑"
              class=""
              src="edit.png"
              title="编辑"
            />
            <img
              alt="更新"
              class=""
              src="update.png"
              title="更新"
            />
            <img
              alt="删除"
              class=""
              src="remove.png"
              title="删除"
            />
            <img
              alt="上移"
              class=""
              src="up.png"
              title="上移"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: block;"
    >
      <button
        class="perspPreviewBtn"
        type="button"
      >
        <img
          alt="预览"
          src="playAll.png"
          title="预览"
        />
        预览
      </button>
    </div>
  </div>
</div>
`;

exports[`perspective manager should move perspective 2`] = `
<div>
  <div
    class="perspectiveManager"
  >
    <div
      class="nameInput"
    >
      <span>
        路径名称：
      </span>
      <input
        type="text"
      />
    </div>
    <div
      class="save"
    >
      <button
        type="button"
      >
        添加视角
      </button>
      <button
        type="button"
      >
        保存路径
      </button>
    </div>
    <div
      class="perspContainer"
    >
      <div
        class="perspItem"
      >
        <div
          class="perspTools"
        >
          <span>
            视角2
          </span>
          <div>
            <img
              alt="查看"
              src="view.png"
              title="查看"
            />
            <img
              alt="编辑"
              class=""
              src="edit.png"
              title="编辑"
            />
            <img
              alt="更新"
              class=""
              src="update.png"
              title="更新"
            />
            <img
              alt="删除"
              class=""
              src="remove.png"
              title="删除"
            />
            <img
              alt="下移"
              class=""
              src="down.png"
              title="下移"
            />
          </div>
        </div>
      </div>
      <div
        class="perspItem"
      >
        <div
          class="perspTools"
        >
          <span>
            视角3
          </span>
          <div>
            <img
              alt="编辑帧"
              src="edit.png"
              title="编辑帧"
            />
            <img
              alt="播放"
              src="play.png"
              title="播放"
            />
            <img
              alt="查看"
              src="view.png"
              title="查看"
            />
            <img
              alt="编辑"
              class=""
              src="edit.png"
              title="编辑"
            />
            <img
              alt="更新"
              class=""
              src="update.png"
              title="更新"
            />
            <img
              alt="删除"
              class=""
              src="remove.png"
              title="删除"
            />
            <img
              alt="上移"
              class=""
              src="up.png"
              title="上移"
            />
            <img
              alt="下移"
              class=""
              src="down.png"
              title="下移"
            />
          </div>
        </div>
      </div>
      <div
        class="perspItem"
      >
        <div
          class="perspTools"
        >
          <span>
            视角1
          </span>
          <div>
            <img
              alt="编辑帧"
              src="edit.png"
              title="编辑帧"
            />
            <img
              alt="播放"
              src="play.png"
              title="播放"
            />
            <img
              alt="查看"
              src="view.png"
              title="查看"
            />
            <img
              alt="编辑"
              class=""
              src="edit.png"
              title="编辑"
            />
            <img
              alt="更新"
              class=""
              src="update.png"
              title="更新"
            />
            <img
              alt="删除"
              class=""
              src="remove.png"
              title="删除"
            />
            <img
              alt="上移"
              class=""
              src="up.png"
              title="上移"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: block;"
    >
      <button
        class="perspPreviewBtn"
        type="button"
      >
        <img
          alt="预览"
          src="playAll.png"
          title="预览"
        />
        预览
      </button>
    </div>
  </div>
</div>
`;
